@@ -648,7 +648,7 @@ pvm_print_val_1 (pvm vm, int depth, int mode, int base, int indent,
         ulongval = (uint64_t) longval & ((((uint64_t) 1) << size) - 1);
 
       if (base == 2)
-        pk_print_binary (ulongval, size, 1);
+        pk_print_binary (pk_puts, ulongval, size, 1);
       else
         {
           if (size == 64)
@@ -674,7 +674,7 @@ pvm_print_val_1 (pvm vm, int depth, int mode, int base, int indent,
         uintval = (uint32_t) intval & ((((uint32_t) 1) << size) - 1);
 
       if (base == 2)
-        pk_print_binary ((uint64_t) uintval, size, 1);
+        pk_print_binary (pk_puts, (uint64_t) uintval, size, 1);
       else
         {
           if (size == 32)
@@ -700,7 +700,7 @@ pvm_print_val_1 (pvm vm, int depth, int mode, int base, int indent,
       pk_term_class ("integer");
 
       if (base == 2)
-        pk_print_binary (ulongval, size, 0);
+        pk_print_binary (pk_puts, ulongval, size, 0);
       else
         {
           if (size == 64)
@@ -719,7 +719,7 @@ pvm_print_val_1 (pvm vm, int depth, int mode, int base, int indent,
       pk_term_class ("integer");
 
       if (base == 2)
-        pk_print_binary (uintval, size, 0);
+        pk_print_binary (pk_puts, uintval, size, 0);
       else
         {
           if (size == 32)
